--- a/templates/NOVA/themes/clear/sass/_base.scss
+++ b/templates/NOVA/themes/clear/sass/_base.scss
@@ -2308,7 +2308,6 @@ table caption {
     top: 50px;
     opacity: 0;
     transition: all 0.3s;
-    max-width: 700px;
   }
 
   &.in, &.show {
